Disabling summit banner, adding Gitter info

--- a/_includes/important_links.html
+++ b/_includes/important_links.html
@@ -85,10 +85,10 @@
 
             <div class="col-md-12">
             <i class="fa fa-comments-o fa-5x col-md-2"></i>
-              <a class="col-md-10" href="{{site.baseurl}}/communication/#irc">
-                <article class="irc">
-                  <h3>IRC</h3>
-                  <p>Real-time discussion and help at #geonode on freenode.net</p>
+              <a class="col-md-10" href="{{site.baseurl}}/communication/#gitter">
+                <article class="gitter">
+                  <h3>Gitter</h3>
+                  <p>Real-time discussion and help in the GeoNode Gitter chat room</p>
                 </article>
               </a>
             </div>
