removed reference to old Windows installer; fixed some links to docs

--- a/_includes/important_links.html
+++ b/_includes/important_links.html
@@ -15,10 +15,6 @@
                   <p>$ sudo apt-get update</p>
                   <p>$ sudo apt-get install geonode</p>
                 </span>
-                <h6>Install from EXE in Windows</h6>
-                <span class="mono">
-                  <p><a href="http://build.geonode.org/windows/GeoNode-2.6.x.exe">GeoNode-2.6.x.exe</a></p>
-                </span>
               </li>
               <li class="col-md-4">
                 <div class="num">2</div>
@@ -32,8 +28,8 @@
                 <div class="num">3</div>
                 <h6>Import data</h6>
                 <span class="links">
-                  <p><a href='http://docs.geonode.org/#for-administrators'>Read the admin docs</a></p>
-                  <p><a href="http://docs.geonode.org/en/master/tutorials/admin/install/quick_install.html#quick-installation"> Read the developer installation docs for Windows, OSX and other platforms</a></p>
+                  <p><a href='http://docs.geonode.org/en/latest/tutorials/install_and_admin/index.html'>Read the admin docs</a></p>
+                  <p><a href="http://docs.geonode.org/en/latest/tutorials/install_and_admin/quick_install.html"> Read the developer installation docs for a detailed step by step guide</a></p>
                 </span>
               </li>
             </ul>
