[#79] geonode.org bugs, content and visual representation.

--- a/_includes/important_links.html
+++ b/_includes/important_links.html
@@ -28,8 +28,8 @@
                 <div class="num">3</div>
                 <h6>Import data</h6>
                 <span class="links">
-                  <p><a href='http://docs.geonode.org/en/master/install/core/index.html'>Read the admin docs</a></p>
-                  <p><a href="http://docs.geonode.org/en/master/devel/index.html"> Read the developer installation docs for a detailed step by step guide</a></p>
+                  <p><a href='http://docs.geonode.org/en/2.10.x/install/core/index.html'>Read the admin docs</a></p>
+                  <p><a href="http://docs.geonode.org/en/2.10.x/devel/index.html"> Read the developer installation docs for a detailed step by step guide</a></p>
                 </span>
               </li>
             </ul>
@@ -39,7 +39,7 @@
             <div class="col-md-6">
               <div class="col-md-12">
               <i class="fa fa-print fa-5x col-md-2"></i>
-              <a class="col-md-10" href="http://docs.geonode.org/en/latest/index.html" target="_blank">
+              <a class="col-md-10" href="http://docs.geonode.org/en/2.10.x/index.html" target="_blank">
                 <article class="documentation">
                   <h3>Documentation</h3>
                   <p>Guides for users, developers, and administrators</p>
