--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
             <li><a href="{{ site.baseurl }}/user_features">For Users</a></li>
             <li><a href="{{ site.baseurl }}/dev_features">For Developers</a></li>
             <li><a href="{{ site.baseurl }}/admin_features">For Admins</a></li>
-            <li><a href="http://docs.geonode.org/en/master/usage/index.html/">Workshops</a></li>
+            <li><a href="http://docs.geonode.org/en/2.10.x/usage/index.html">Workshops</a></li>
             <li><a href="{{ site.baseurl }}/communication/">Communication</a></li>
             <li><a href="{{ site.baseurl }}/faqs">FAQs</a></li>
             <li><a href="{{ site.baseurl }}/gallery/">Sites Gallery</a></li>
@@ -29,7 +29,7 @@
         <div class="pull-right">
           <a href="{{ site.baseurl }}/gallery" class="btn btn-success">Gallery</a>
           <a href="{{ site.baseurl }}/#install" class="btn btn-success">Quick Start</a>
-          <a target="_blank" href="http://demo.geonode.org" class="btn btn-warning">Try the Demo</a>
+          <a target="_blank" href="http://master.demo.geonode.org" class="btn btn-warning">Try the Demo</a>
           <a href="{{ site.baseurl }}/blog/" class="btn btn-success">Blog</a>
         </div>
       </div>
