--- a/_includes/important_links.html
+++ b/_includes/important_links.html
@@ -9,19 +9,10 @@
             <ul class="unstyled steps col-md-12">
               <li class="col-md-4">
                 <div class="num">1</div>
-                <h6>Install from PPA in Ubuntu 16.04</h6>
-                <span class="mono">
-                  <p>$ sudo add-apt-repository ppa:geonode/stable</p>
-                  <p>$ sudo apt-get update</p>
-                  <p>$ sudo apt-get install geonode</p>
-                </span>
-              </li>
-              <li class="col-md-4">
-                <div class="num">2</div>
-                <h6>Set the IP address and create a superuser</h6>
-                <span class="mono">
-                  <p>$ geonode createsuperuser</p>
-                  <p>$ sudo geonode-updateip 127.0.0.1</p>
+                <h6>Installation Guides</h6>
+                <span class="links">
+                  <p><a href='http://docs.geonode.org/en/2.10.x/start/index.html#quick-installation-guide'>Quick Installation Guide</a></p>
+                  <p><a href='http://docs.geonode.org/en/2.10.x/install/'>Full Installation Guide</a></p>
                 </span>
               </li>
               <li class="last col-md-4">
