--- a/_includes/important_links.html
+++ b/_includes/important_links.html
@@ -16,10 +16,11 @@
                 </span>
               </li>
               <li class="last col-md-4">
-                <div class="num">3</div>
+                <div class="num">2</div>
                 <h6>Import data</h6>
                 <span class="links">
-                  <p><a href='http://docs.geonode.org/en/2.10.x/install/core/index.html'>Read the admin docs</a></p>
+                  <p><a href='http://docs.geonode.org/en/2.10.x/usage/index.html'>Read the Users Guide</a></p>
+                  <p><a href='http://docs.geonode.org/en/2.10.x/admin/index.html'>Read the Admins Guide</a></p>
                   <p><a href="http://docs.geonode.org/en/2.10.x/devel/index.html"> Read the developer installation docs for a detailed step by step guide</a></p>
                 </span>
               </li>
