FIXES #84 multiple old docs links point to 2.10.x

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
             <li><a href="{{ site.baseurl }}/user_features">For Users</a></li>
             <li><a href="{{ site.baseurl }}/dev_features">For Developers</a></li>
             <li><a href="{{ site.baseurl }}/admin_features">For Admins</a></li>
-            <li><a href="http://docs.geonode.org/en/2.10.x/usage/index.html">Workshops</a></li>
+            <li><a href="http://docs.geonode.org/en/2.10/usage/index.html">Workshops</a></li>
             <li><a href="{{ site.baseurl }}/communication/">Communication</a></li>
             <li><a href="{{ site.baseurl }}/faqs">FAQs</a></li>
             <li><a href="{{ site.baseurl }}/gallery/">Sites Gallery</a></li>
