- Updating documentation links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,12 +13,12 @@
             <li><a href="{{ site.baseurl }}/user_features">For Users</a></li>
             <li><a href="{{ site.baseurl }}/dev_features">For Developers</a></li>
             <li><a href="{{ site.baseurl }}/admin_features">For Admins</a></li>
-            <li><a href="http://docs.geonode.org/en/2.10/usage/index.html">Workshops</a></li>
+            <li><a href="https://docs.geonode.org/en/master/usage/index.html">Workshops</a></li>
             <li><a href="{{ site.baseurl }}/communication/">Communication</a></li>
             <li><a href="{{ site.baseurl }}/faqs">FAQs</a></li>
             <li><a href="{{ site.baseurl }}/gallery/">Sites Gallery</a></li>
             <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
-            <li><a href="http://docs.geonode.org" target = "_blank">Documentation</a></li>
+            <li><a href="https://docs.geonode.org" target="_blank">Documentation</a></li>
             <li><a href="http://github.com/geonode/geonode/issues" target = "_blank">Issue Tracker</a></li>
             <li><a href="{{ site.baseurl }}/providers/">Commercial Providers</a></li>
             <li><a href="{{ site.baseurl }}/jobs/">Jobs</a></li>
