--- a/_includes/important_links.html
+++ b/_includes/important_links.html
@@ -11,17 +11,18 @@
                 <div class="num">1</div>
                 <h6>Installation Guides</h6>
                 <span class="links">
-                  <p><a href='http://docs.geonode.org/en/3.0/start/index.html#quick-installation-guide'>Quick Installation Guide</a></p>
-                  <p><a href='http://docs.geonode.org/en/3.0/install/'>Full Installation Guide</a></p>
+                  <p><a href='https://docs.geonode.org/en/master/start/index.html#quick-installation-guide'>Quick Installation Guide</a></p>
+                  <p><a href='https://docs.geonode.org/en/master/install/basic/index.html'>Basic Installation Guide</a></p>
+                  <p><a href='https://docs.geonode.org/en/master/install/advanced/index.html'><strong>[for advanced users only]</strong> Advanced Installation Guide</a></p>
                 </span>
               </li>
               <li class="last col-md-4">
                 <div class="num">2</div>
                 <h6>Import data</h6>
                 <span class="links">
-                  <p><a href='http://docs.geonode.org/en/3.0/usage/index.html'>Read the Users Guide</a></p>
-                  <p><a href='http://docs.geonode.org/en/3.0/admin/index.html'>Read the Admins Guide</a></p>
-                  <p><a href="http://docs.geonode.org/en/3.0/devel/index.html"> Read the developer installation docs for a detailed step by step guide</a></p>
+                  <p><a href='https://docs.geonode.org/en/master/usage/index.html'>Read the Users Guide</a></p>
+                  <p><a href='https://docs.geonode.org/en/master/admin/index.html'>Read the Admins Guide</a></p>
+                  <p><a href='https://docs.geonode.org/en/master/devel/index.html'> Read the developer installation docs for a detailed step by step guide</a></p>
                 </span>
               </li>
             </ul>
@@ -31,7 +32,7 @@
             <div class="col-md-6">
               <div class="col-md-12">
               <i class="fa fa-print fa-5x col-md-2"></i>
-              <a class="col-md-10" href="http://docs.geonode.org/en/3.0/index.html" target="_blank">
+              <a class="col-md-10" href="https://docs.geonode.org" target="_blank">
                 <article class="documentation">
                   <h3>Documentation</h3>
                   <p>Guides for users, developers, and administrators</p>
