Updated Dev Features page.

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -6657,7 +6657,7 @@ body.geonode-features.user-features section.feature-details img.feature-img {
 }
 
 body.geonode-features.user-features section.feature-details.feature1 img.feature-img {
-    margin-left: 60px
+    margin-left: 60px;
 }
 
 body.geonode-features.user-features section.feature-details.feature2 img.feature-img {
