Aligned important link and icons using flexbox.

--- a/_includes/important_links.html
+++ b/_includes/important_links.html
@@ -30,7 +30,7 @@
 
           <div class="row documentation-items">
             <div class="col-md-6">
-              <div class="col-md-12">
+              <div class="col-md-12 d-flex flex-row">
               <i class="fa fa-print fa-5x col-md-2"></i>
               <a class="col-md-10" href="https://docs.geonode.org" target="_blank">
                 <article class="documentation">
@@ -40,7 +40,7 @@
               </a>
             </div>
 
-            <div class="col-md-12">
+            <div class="col-md-12 d-flex flex-row">
             <i class="fa fa-envelope-o fa-5x col-md-2"></i>
               <a class="col-md-10" href="{{site.baseurl}}/communication/#mailing-lists">
                 <article class="mailing-list">
@@ -50,7 +50,7 @@
               </a>
             </div>
 
-            <div class="col-md-12">
+            <div class="col-md-12 d-flex flex-row">
             <i class="fa fa-pencil-square-o fa-5x col-md-2"></i>
               <a class="col-md-10" href="https://github.com/GeoNode/geonode/issues" target="_blank">
                 <article class="issue-tracker">
@@ -62,7 +62,7 @@
           </div>
 
           <div class="col-md-6">
-            <div class="col-md-12">
+            <div class="col-md-12 d-flex flex-row">
             <i class="fa fa-question-circle fa-5x col-md-2"></i>
               <a class="col-md-10" href="{{site.baseurl}}/faqs">
                 <article class="faqs">
@@ -72,7 +72,7 @@
               </a>
             </div>
 
-            <div class="col-md-12">
+            <div class="col-md-12 d-flex flex-row">
             <i class="fa fa-comments-o fa-5x col-md-2"></i>
               <a class="col-md-10" href="{{site.baseurl}}/communication/#gitter">
                 <article class="gitter">
@@ -82,7 +82,7 @@
               </a>
             </div>
 
-            <div class="col-md-12">
+            <div class="col-md-12 d-flex flex-row">
             <i class="fa fa-picture-o fa-5x col-md-2"></i>
               <a class="col-md-10" href="{{site.baseurl}}/gallery/">
                 <article class="sites-gallery">
