--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -18,7 +18,7 @@ layout: blank
     <link href="https://fonts.googleapis.com/css?family={{ font }}" rel="stylesheet" type="text/css">
     {% endfor %}
     <link rel="stylesheet" href="{{site.baseurl}}/static/css/site.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="{{site.baseurl}}/static/css/bootstrap.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="{{site.baseurl}}/static/css/bootstrap.min.css" type="text/css" media="all" />
     <link rel="stylesheet" href="{{site.baseurl}}/static/css/font-awesome.min.css">
     <!-- HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
