fixed centering of important links

--- a/_includes/important_links.html
+++ b/_includes/important_links.html
@@ -1,5 +1,5 @@
 <section class="important-links">
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-md-1 col-md-offset-1">
           <h2 class="quick-start">Quick Start</h2>
         </div>
