--- a/static/less/site.less
+++ b/static/less/site.less
@@ -87,6 +87,7 @@ section.banner {
   .bg-clr(@beige, "banner_bg.png", repeat-x, left, bottom);
   color:@white;
   padding:30px 0 40px;
+  height: 440px;
 
   h1 {
     font-weight:300;
