--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,10 @@
 <header class="main">
     <div class="container">
         <div class="row justify-content-center">
-			<div class="col-md-12 d-flex justify-content-between">
-				<div><a class="brand" href="{{ site.baseurl }}/">GeoNode</a></div>	
-				<div>
-					<a href="{{ site.baseurl }}/gallery" class="btn btn-success">Gallery</a>
-					<a href="{{ site.baseurl }}/#install" class="btn btn-success">Quick Start</a>
-					<a target="_blank" href="http://master.demo.geonode.org" class="btn btn-warning">Try the Demo</a>
-				</div>
-            </div>
+			<div class="col-md-6" style="height: 80px"><a class="brand" href="{{ site.baseurl }}/"></a></div>	
+			<div class="col-md-6 text-end">
+				<a target="_blank" href="http://demo.geonode.org" class="btn btn-warning">Try the Demo</a>
+			</div>
         </div>
     </div>
 </header>
