--- a/_includes/important_links.html
+++ b/_includes/important_links.html
@@ -16,7 +16,7 @@
           <i class="fa fa-envelope-o fa-3x col-md-2"></i>
           <a class="col-md-10" href="{{site.baseurl}}/communication/#mailing-lists">
             <article class="mailing-list">
-              <h3>Mailing Lists</h3>
+              <h3>Channels</h3>
               <p>Discussion groups for users and developers</p>
             </article>
           </a>
@@ -35,31 +35,21 @@
 
       <div class="col-md-6">
         <div class="col-md-12 d-flex flex-row">
-          <i class="fa fa-question-circle fa-3x col-md-2"></i>
-          <a class="col-md-10" href="{{site.baseurl}}/faqs">
-            <article class="faqs">
-              <h3>FAQs</h3>
-              <p>Frequently Asked Questions about GeoNode</p>
-            </article>
-          </a>
-        </div>
-
-        <div class="col-md-12 d-flex flex-row">
-        <i class="fa fa-comments-o fa-3x col-md-2"></i>
-          <a class="col-md-10" href="{{site.baseurl}}/communication/#gitter">
-            <article class="gitter">
-              <h3>Gitter</h3>
-              <p>Real-time discussion and help in the GeoNode Gitter chat room</p>
-            </article>
-          </a>
-        </div>
-
-        <div class="col-md-12 d-flex flex-row">
         <i class="fa fa-picture-o fa-3x col-md-2"></i>
           <a class="col-md-10" href="{{site.baseurl}}/gallery/">
             <article class="sites-gallery">
               <h3>Gallery</h3>
               <p>A collection of live sites built using GeoNode</p>
+            </article>
+          </a>
+        </div>
+
+        <div class="col-md-12 d-flex flex-row">
+          <i class="fa fa-question-circle fa-3x col-md-2"></i>
+          <a class="col-md-10" href="{{site.baseurl}}/faqs">
+            <article class="faqs">
+              <h3>FAQs</h3>
+              <p>Frequently Asked Questions about GeoNode</p>
             </article>
           </a>
         </div>
